data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2553.wast
;; 4. **Conditional Call within Block**: Validate block control flow by including a `br_if` condition that determines whether to call a function within a block.    ```    block $block5      i32.const 1      br_if $label1      call $func3    end    ```

(assert_invalid
  (module
    (func $func3 (result i32) (i32.const 0))
    (func
      (block $block5
        i32.const 1
        br_if 1
        call $func3
      )
    )
  )
  "type mismatch"
)